# rust-kvs

./: Cargo.toml
benches/: local_cache_bench.rs
src/: bytestore.rs  lib.rs  lrucache.rs  network.rs  server.rs  simple_cache.rs  ttlcache.rs
src/cache/: byte_cache.rs  mod.rs  traits.rs
src/protocol/: decoder.rs  encoder.rs  mod.rs  types.rs
tests/: integration_test.rs
