[package]
name = "rust-kvs"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.0"
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
lru = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "local_cache_bench"
harness = false