[package]
name = "rust-kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.0"
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
lru = "0.12"
rkyv = {version = "0.7", features = ["validation", "uuid"]}
dashmap = "5.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "local_cache_bench"
harness = false